--- a/src/containers/styles.css
+++ b/src/containers/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fcfcfc;
+  background-color: #fafafa;
   color: black;
   margin-top: 3.8em; 
 }
@@ -7,4 +7,8 @@ body {
 .align-center {
   margin: 0 auto; 
   width: 50%;
+}
+
+.page {
+  width: 80%;
 }
